<resources>
    <string name="app_name">FarMap</string>

    <string name="invalid_mail">Correu invàlid</string>
    <string name="invalid_password">La contrasenya ha de tenir més de 6 dígits</string>
    <string name="title_activity_home_farmacia">home_farmacia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button">Button</string>
    <string name="login">login</string>
    <string name="reproducir">Reproducir</string>
    <string name="calendario">Calendario</string>
    <string name="reproducir_musica">reproducir musica</string>
    <string name="hora">Hora</string>
    <string name="menu_home">Inici</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d FarMap</string>
    <string name="Nuriainfo">Carrer: Carrer de La Llibertat, 70, 17820 Banyoles, Girona
                             Horari: 9:00–13:30, 16:30–20:00
                             Telèfon: 972576308</string>

    <string name="aguerinfo">Carrer: C/ Major, 269, 17190 Salt, Girona
                             Horari: 8:00–15:30, 16:30–21:00
                             Telèfon: 972231249</string>

    <string name="franchinfo">Carrer: Carrer de la Indústria, 41, 17160 Anglès
                             Horari: 9:00–14:00, 16:30–20:00
                             Telèfon: 972420051</string>

    <string name="quintanainfo">Carrer: Avinguda de Sant Narcís, 32, Girona
                             Horari: 9:00–13:30, 16:30–20:00
                             Telèfon: 972232604</string>

    <string name="palauinfo">Carrer: Plaza Marquès de Camps, 7, Girona
                             Horari: 9:00–13:30, 16:30–20:00
                             Telèfon: 972200997</string>

    <string name="borellinfo">Carrer: Carrer Carme, 127, Girona
                             Horari: 9:00–13:30, 16:30–20:00
                             Telèfon: 972208809</string>

    <string name="guixerasinfo">Carrer: Carretera de Sant Feliu, 23, Girona
                             Horari: 9:00–13:30, 16:30–20:00
                             Telèfon: 972211815</string>

    <string name="camosinfo">Carrer: Calle Agudes, 30, 17006, Girona
                             Horari: 9:00–13:30, 16:30–20:00
                             Telèfon: 972231844</string>

    <string name="camainfo">Carrer: Carrer Joan Maragall, 36 Girona
                             Horari: 9:00–13:30, 16:30–20:00
                             Telèfon: 972206075</string>

    <string name="altainfo">Carrer: Rambla de la Llibertat, 18, Girona
                             Horari: 9:00–13:30, 16:30–20:00
                             Telèfon: 972200191</string>

    <string name="menu_gallery">Productes</string>
    <string name="menu_slideshow">Ubicació Farmàcies</string>
    <string name="menu_juego">Informació Farmàcies</string>
    <string name="menu_logout">Logout</string>
    <string name="about">Sobre FarMap</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_farmacia">farmacia</string>
    <string name="title_activity_menu_desplegable">Menu_desplegable</string>
</resources>