<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Menu">
        <menu>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/productes_api"
            android:icon="@drawable/produv"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/maps_debo"
            android:icon="@drawable/mapa"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/farmacia_api"
            android:icon="@drawable/info"
            android:title="@string/menu_juego" />

        </menu>
    </item>

    <item android:title="Submenu">
        <menu>

            <item
                android:id="@+id/homierdos"
                android:icon="@drawable/int2"
                android:title="@string/about" />

        </menu>
    </item>
</menu>